# XGBoost-for-Regression-Predictive-Modeling-and-Time-Series-Analysis-2026

./: pyproject.toml
chapter_02/: irisclassifier.ipynb
chapter_04/: housingvaluepredicter.ipynb
chapter_05/: housingvaluemodelcomparison.ipynb
chapter_06/: datacleaning.ipynb
chapter_07/: feature_engineering.ipynb
chapter_09/: xgboost_timeseries_forecasting.ipynb
chapter_10/: model_interpretability.ipynb
