[project]
name = "xgboost-for-regression-predictive-modeling-and-time-series-analysis-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "eli5>=0.16.0",
    "ipykernel>=7.2.0",
    "ipympl>=0.10.0",
    "pandas<3",
    "pip>=26.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
    "xgboost>=3.2.0",
]
